syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.timevale.grpc.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

service Geeter{
    rpc  SayHello(HelloGreeting) returns (HelloReply) {}
}

message HelloGreeting {
    string name = 1;
}

message HelloReply {
    string message = 1;
}